deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gobank
spec:
  rules:
    - host: gobank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gobank
                port:
                  number: 80
